# Breakout-Clone

./: .gitignore  Breakout Clone.sln  CMakeLists.txt  README.md
Breakout Clone/: Breakout Clone.vcxproj  Breakout Clone.vcxproj.filters  ball.cpp  ball.h  entity.h  main.cpp  main_game.cpp  main_game.h  main_menu.cpp  main_menu.h  paddle.cpp  paddle.h  score_system.cpp  score_system.h  wall.cpp  wall.h
Breakout Clone/Debug/: vc120.idb
Breakout Clone/Debug/Breakout Clone.tlog/: Breakout Clone.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/: Breakout Clone.ilk
src/: ball.cpp  ball.hpp  entity.hpp  game.cpp  game.hpp  game_state.hpp  main.cpp  menu.cpp  menu.hpp  paddle.cpp  paddle.hpp  score.cpp  score.hpp  state.hpp  wall.cpp  wall.hpp
